Spacing fix on lost action descriptions

--- a/src/scss/ui/components/LostActionsDivGen.scss
+++ b/src/scss/ui/components/LostActionsDivGen.scss
@@ -15,15 +15,24 @@
     justify-content: center;
     height: 80px;
 
+    img {
+        height: 65px;
+    }
+
     .Testing1Inner1 {
         display: flex;
         flex-direction: row;
         width: 50%;
         align-items: center;
+        margin-left: 10px;
         
         p {
             margin: 0px;
             padding: 5px 0px;
+        }
+
+        p:last-of-type {
+            padding-bottom: 0px;
         }
 
         .Testing1Inner1Inner {
